@@ -1,3 +1,7 @@
+2008-07-15  Og Maciel <ogmaciel@gnome.org>
+
+    * alarm.py: Do not translate time format and leave it up to locale.
+      ref http://code.google.com/p/billreminder/issues/detail?id=12
 2008-07-10  Og Maciel <ogmaciel@gnome.org>
 
     * alarm.py: Make use of gconf values
