@@ -4,6 +4,8 @@ BillReminder 0.3.2
  Bugs:
   * Paid/Not Paid entries exist in File and Edit menus; Make them toggle/untoggle appropriately
    ref http://code.google.com/p/billreminder/issues/detail?id=13
+  * Issues with date and time locale?
+   ref http://code.google.com/p/billreminder/issues/detail?id=12
   * Ambiguity with Alerts and Alarms in preferences dialog
    ref  http://code.google.com/p/billreminder/issues/detail?id=11
   * Make category names a unique field.
